--- a/Galaxy.vcxproj
+++ b/Galaxy.vcxproj
@@ -91,7 +91,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
@@ -99,12 +99,12 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\lib;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>DevIL.lib ILU.lib ILUT.lib %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\devil\bin\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -114,7 +114,7 @@ xcopy /y /d Data $(OutDir)</Command>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
@@ -122,12 +122,12 @@ xcopy /y /d Data $(OutDir)</Command>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\lib;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>DevIL.lib ILU.lib ILUT.lib %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\devil\bin\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -142,19 +142,19 @@ xcopy /y /d Data $(OutDir)</Command>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\lib;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>DevIL.lib ILU.lib ILUT.lib %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\devil\bin\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -166,7 +166,7 @@ xcopy /y /d Data $(OutDir)</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
@@ -176,12 +176,12 @@ xcopy /y /d Data $(OutDir)</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\Galaxy\Lib\devil\lib;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>DevIL.lib ILU.lib ILUT.lib %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\devil\bin\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -193,6 +193,7 @@ xcopy /y /d Data $(OutDir)</Command>
     <ClCompile Include="Src\GalaxySystem.cpp" />
     <ClCompile Include="Src\integration.cpp" />
     <ClCompile Include="Src\lpVec3.cpp" />
+    <ClCompile Include="Src\main2.cpp" />
     <ClCompile Include="Src\poisson.cpp" />
     <ClCompile Include="Src\solver.cpp" />
     <ClCompile Include="Src\SphericalModel.cpp" />
@@ -212,6 +213,7 @@ xcopy /y /d Data $(OutDir)</Command>
     <ClInclude Include="Src\poisson.h" />
     <ClInclude Include="Src\solver.h" />
     <ClInclude Include="Src\SphericalModel.h" />
+    <ClInclude Include="Src\stb_image.h" />
     <ClInclude Include="Src\texture.h" />
     <ClInclude Include="Src\Universe.h" />
   </ItemGroup>
