--- a/Galaxy.vcxproj
+++ b/Galaxy.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{EC4A67B2-DF3C-43C3-B9E1-3199156D8BD7}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Galaxy</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -71,19 +71,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Build</OutDir>
+    <OutDir>Build\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Build</OutDir>
+    <OutDir>Build\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Build</OutDir>
+    <OutDir>Build\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>Build</OutDir>
+    <OutDir>Build\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -91,7 +91,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Lib\irrlicht\include;Lib\freeglut\include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
@@ -99,12 +99,12 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>Lib\irrlicht\lib\Win32-visualstudio;Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\irrlicht.dll $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -114,7 +114,7 @@ xcopy /y /d Data $(OutDir)</Command>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Lib\irrlicht\include;Lib\freeglut\include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
@@ -122,12 +122,12 @@ xcopy /y /d Data $(OutDir)</Command>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>Lib\irrlicht\lib\Win32-visualstudio;Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\irrlicht.dll $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -142,19 +142,19 @@ xcopy /y /d Data $(OutDir)</Command>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Lib\irrlicht\include;Lib\freeglut\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>Lib\irrlicht\lib\Win32-visualstudio;Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\irrlicht.dll $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -166,7 +166,7 @@ xcopy /y /d Data $(OutDir)</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\include;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>Lib\irrlicht\include;Lib\freeglut\include</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
@@ -176,12 +176,12 @@ xcopy /y /d Data $(OutDir)</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\anton\Desktop\1\galaxy\Lib\irrlicht\lib\Win32-visualstudio;C:\Users\anton\Desktop\1\Galaxy\Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>Lib\irrlicht\lib\Win32-visualstudio;Lib\freeglut\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>Irrlicht.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d Lib\freeglut\bin\* $(OutDir)
-xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\* $(OutDir)
+xcopy /y /d Lib\irrlicht\bin\Win32-VisualStudio\irrlicht.dll $(OutDir)
 xcopy /y /d Data $(OutDir)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
