--- a/Galaxy.vcxproj.filters
+++ b/Galaxy.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Src\BarnesHutTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Src\lpVec3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -51,12 +48,12 @@
     <ClCompile Include="Src\UIOverlay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\float3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\BarnesHutTree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\lpVec3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\SphericalModel.h">
@@ -87,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\UIOverlay.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\float3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
