Particles physical attributes in separate arrays

--- a/Galaxy.vcxproj.filters
+++ b/Galaxy.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="Src\OpenCL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\GPUSolver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\BarnesHutTree.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\Orbit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\GPUSolver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
