--- a/Galaxy.vcxproj
+++ b/Galaxy.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="Src\BarnesHutTree.cpp" />
     <ClCompile Include="Src\Galaxy.cpp" />
     <ClCompile Include="Src\float3.cpp" />
+    <ClCompile Include="Src\GPUSolver.cpp" />
     <ClCompile Include="Src\Main.cpp" />
     <ClCompile Include="Src\Math.cpp" />
     <ClCompile Include="Src\OpenCL.cpp" />
@@ -39,6 +40,7 @@
     <ClInclude Include="Src\Constants.h" />
     <ClInclude Include="Src\Galaxy.h" />
     <ClInclude Include="Src\float3.h" />
+    <ClInclude Include="Src\GPUSolver.h" />
     <ClInclude Include="Src\Math.h" />
     <ClInclude Include="Src\OpenCL.h" />
     <ClInclude Include="Src\Orbit.h" />
