--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -1,6 +1,4 @@
 set(GALAXY_SOURCES
-   GalaxyApplication.cpp
-   GalaxyApplication.h
    GalaxyEngine.cpp
    GalaxyEngine.h
    GalaxyConfiguration.h
@@ -8,13 +6,10 @@ set(GALAXY_SOURCES
    GalaxyUI.h
    OrbitController.cpp
    OrbitController.h
-   ${GAME_DIR}/WinApplication.cpp
-   ${GAME_DIR}/WinApplication.h
    Main.cpp)
 
 add_executable(Galaxy ${GALAXY_SOURCES})
 
 add_subdirectory(Core)
 
-target_include_directories(Galaxy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(Galaxy Nucleus Core)
+target_link_libraries(Galaxy PRIVATE Galaxy.Core Nucleus.Engine)
