WIP: Split into modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,17 @@ set(BUNDLE_PATH ${NUCLEUS_DIR}/Sources/Nucleus/Engine/Core/Bundle.h)
 
 function(ConfigureGalaxyModule name sources)
 	target_compile_definitions(${name} PRIVATE NUCLEUS_BUILD_SHARED)
+	target_include_directories(${name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
     target_precompile_headers(${name} PUBLIC ${BUNDLE_PATH})
     source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Source Files" FILES ${sources})
     set_target_properties(${name} PROPERTIES FOLDER "Galaxy")
 endfunction()
 
-add_subdirectory(Sources)
+# Add modules
+#add_subdirectory(Sources/Controllers)
+add_subdirectory(Sources/GalaxySimulator)
+add_subdirectory(Sources/Launcher)
+add_subdirectory(Sources/Model)
+add_subdirectory(Sources/Render)
+add_subdirectory(Sources/Simulation)
+add_subdirectory(Sources/Utils)
