--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,10 @@ endfunction()
 
 # Add modules
 #add_subdirectory(Sources/Controllers)
-#add_subdirectory(Sources/GalaxySimulator)
+add_subdirectory(Sources/GalaxySimulator)
 add_subdirectory(Sources/Launcher)
-#add_subdirectory(Sources/Model)
-#add_subdirectory(Sources/Render)
-#add_subdirectory(Sources/Simulation)
-#add_subdirectory(Sources/Utils)
+add_subdirectory(Sources/Model)
+add_subdirectory(Sources/Render)
+add_subdirectory(Sources/Simulation)
+#add_subdirectory(Sources/UI)
+add_subdirectory(Sources/Utils)
