Galaxy Renderer as Nucleus Renderer Plugin

--- a/Sources/Render/CMakeLists.txt
+++ b/Sources/Render/CMakeLists.txt
@@ -4,4 +4,4 @@ set(RENDER_SOURCES
 	
 add_library(Galaxy.Render ${RENDER_SOURCES})
 ConfigureGalaxyModule(Galaxy.Render "${RENDER_SOURCES}")
-#target_link_libraries(Galaxy PRIVATE Nucleus.Launch Galaxy.GalaxySimulator)
+target_link_libraries(Galaxy.Render PRIVATE Nucleus.Engine Galaxy.Model)
