--- a/Sources/GalaxySimulator/CMakeLists.txt
+++ b/Sources/GalaxySimulator/CMakeLists.txt
@@ -4,4 +4,7 @@ set(GALAXY_SIMULATOR_SOURCES
 	
 add_library(Galaxy.GalaxySimulator STATIC ${GALAXY_SIMULATOR_SOURCES})
 ConfigureGalaxyModule(Galaxy.GalaxySimulator "${GALAXY_SIMULATOR_SOURCES}")
-target_link_libraries(Galaxy.GalaxySimulator PUBLIC Galaxy.Model Nucleus.Engine)
+target_link_libraries(Galaxy.GalaxySimulator PUBLIC
+	Galaxy.Render
+	Galaxy.Model
+	Nucleus.Engine)
