WIP: Bruteforce on CPU works

--- a/Sources/GalaxySimulator/CMakeLists.txt
+++ b/Sources/GalaxySimulator/CMakeLists.txt
@@ -4,7 +4,8 @@ set(GALAXY_SIMULATOR_SOURCES
 	
 add_library(Galaxy.GalaxySimulator STATIC ${GALAXY_SIMULATOR_SOURCES})
 ConfigureGalaxyModule(Galaxy.GalaxySimulator "${GALAXY_SIMULATOR_SOURCES}")
-target_link_libraries(Galaxy.GalaxySimulator PUBLIC
+target_link_libraries(Galaxy.GalaxySimulator PRIVATE
 	Galaxy.Render
 	Galaxy.Model
+	Galaxy.Simulation
 	Nucleus.Engine)
