--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,5 +43,5 @@ add_subdirectory(Sources/Launcher)
 add_subdirectory(Sources/Model)
 add_subdirectory(Sources/Render)
 add_subdirectory(Sources/Simulation)
-#add_subdirectory(Sources/UI)
+add_subdirectory(Sources/UI)
 add_subdirectory(Sources/Utils)
