--- a/Sources/GalaxySimulator/CMakeLists.txt
+++ b/Sources/GalaxySimulator/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(Galaxy.GalaxySimulator STATIC ${GALAXY_SIMULATOR_SOURCES})
 ConfigureGalaxyModule(Galaxy.GalaxySimulator "${GALAXY_SIMULATOR_SOURCES}")
 target_link_libraries(Galaxy.GalaxySimulator PRIVATE
 	Galaxy.Render
+	Galaxy.UI
 	Galaxy.Model
 	Galaxy.Simulation
 	Nucleus.Engine)
