Simulation context introduced

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ set(BUNDLE_PATH ${NUCLEUS_DIR}/Sources/Nucleus/Engine/Core/Bundle.h)
 
 function(ConfigureGalaxyModule name sources)
 	target_compile_definitions(${name} PRIVATE NUCLEUS_BUILD_SHARED)
-	target_include_directories(${name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+	target_include_directories(${name} PUBLIC ${CMAKE_SOURCE_DIR}/Sources)
+	target_include_directories(${name} PUBLIC ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
     target_precompile_headers(${name} PUBLIC ${BUNDLE_PATH})
     source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Source Files" FILES ${sources})
     set_target_properties(${name} PROPERTIES FOLDER "Galaxy")
