WIP: Fixed bug in ThreadPool

--- a/Sources/GalaxySimulator/CMakeLists.txt
+++ b/Sources/GalaxySimulator/CMakeLists.txt
@@ -10,4 +10,5 @@ target_link_libraries(Galaxy.GalaxySimulator PRIVATE
 	Galaxy.UI
 	Galaxy.Model
 	Galaxy.Simulation
+	Galaxy.Utils
 	Nucleus.Engine)
