Remove old submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "Libs/Nucleus"]
-	path = Libs/Nucleus
-	url = c:/Workspace/NET/BilliardsGit
-[submodule "Libs/Nucleus2"]
+[submodule "Nucleus"]
 	path = Libs/Nucleus2
 	url = D:\\NET\\Billiards2
