Fixes after rename SM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
 
 # Setup Nucleus
-set(NUCLEUS_DIR ${CMAKE_SOURCE_DIR}/Libs/Nucleus2)
+set(NUCLEUS_DIR ${CMAKE_SOURCE_DIR}/Libs/Nucleus)
 set(BILLIARDS_BUILD_GAME OFF)
 set(BILLIARDS_BUILD_SHARED ON)
 set(NUCLEUS_INCLUDE_FORMAT OFF)
